[package]
name = "jssh"
authors = ["RoyalFoxy"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
confy = "0.5.1"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
is_executable = "1.0.1"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
regex = "1.9.6"
rusty_v8 = "0.32.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shellexpand = "3.1.0"
syntect = "5.1.0"
